...
        self.presenter?.view = self
    }
    
    private func configureTableView() {
        tableView.delegate = self
        tableView.dataSource = self
        tableView.accessibilityIdentifier = "ImagesListTableView"
        tableView.separatorStyle = .none
        tableView.backgroundColor = .ypBlack
        tableView.addSubview(refreshControl)
        tableView.register(ImagesListCell.self, forCellReuseIdentifier: ImagesListCell.reuseIdentifier)
    }
    
...
